data/derived/comb/progs/unify/prog3808.ml.out
Characters 112-129:
  listReverse [] [];;
  ^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b list -> 'a list
